--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "tailwind": "^4.0.0",
+    "uuid": "^8.3.1",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
